javascript refactoring to fix load/ready issues on Safari

--- a/app/styles/_mobirise.scss
+++ b/app/styles/_mobirise.scss
@@ -286,7 +286,8 @@ $hamburger-color: $gray-darker;
   .mbr-buttons-right {
     .mbr-buttons-btn,
     .mbr-buttons-link {
-      text-align: center;
+      text-align : center;
+      text-shadow: none !important;
     }
   }
 }
@@ -449,26 +450,28 @@ $hamburger-color: $gray-darker;
   top: 5px;
 }
 
-.mbr-hamburger-open .mbr-hamburger-line {
-  border-color: transparent;
-}
+.mbr-hamburger-open {
+  .mbr-hamburger-line {
+    border-color: transparent;
+  }
 
-.mbr-hamburger-open .mbr-hamburger-line:after,
-.mbr-hamburger-open .mbr-hamburger-line:before {
-  top: 0;
-}
+  .mbr-hamburger-line:after,
+  .mbr-hamburger-line:before {
+    top: 0;
+  }
 
-.mbr-hamburger-open .mbr-hamburger-line:before {
-  -webkit-transform: rotate(45deg);
-  -ms-transform    : rotate(45deg);
-  transform        : rotate(45deg);
-}
+  .mbr-hamburger-line:before {
+    -webkit-transform: rotate(45deg);
+    -ms-transform    : rotate(45deg);
+    transform        : rotate(45deg);
+  }
 
-.mbr-hamburger-open .mbr-hamburger-line:after {
-  top              : 10px;
-  -webkit-transform: translatey(-10px) rotate(-45deg);
-  -ms-transform    : translatey(-10px) rotate(-45deg);
-  transform        : translatey(-10px) rotate(-45deg);
+  .mbr-hamburger-line:after {
+    top              : 10px;
+    -webkit-transform: translatey(-10px) rotate(-45deg);
+    -ms-transform    : translatey(-10px) rotate(-45deg);
+    transform        : translatey(-10px) rotate(-45deg);
+  }
 }
 @media (max-width:$screen-xs-max) {
   .mbr-hamburger {
